# SnowRunner-UI-Changes

./: CMakeLists.txt  LICENSE  README.md
DLL/: CMakeLists.txt  Logging.cpp  Logging.h  SRUIC.cpp  SRUIC.h  version.rc
DLL/include/: data_types.h
Injector/: CMakeLists.txt  Injector.cpp  injector.h  version.rc
